k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tophcalc-service
  namespace: tophcalc
spec:
  selector:
    app: tophcalc
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  type: ClusterIP
